Fixed "Discover" pages and icons alignements; images on stream are aligned to the center

--- a/twitter.*/masonry-redesigned-1col.css
+++ b/twitter.*/masonry-redesigned-1col.css
@@ -2,6 +2,7 @@
 Design inspired by https://dribbble.com/gregoirevella/projects/191186-Twitter-concept
 Made by shosher8a and theotix, updated by mkody
 */
+@-moz-document regexp("https?://twitter.com/.*") {
 body {
 font:14px/20px Roboto,sans-serif;
 color:#333;
@@ -19,7 +20,7 @@ text-align:left;
 padding:9px 0;
 }
 
-.pull-right {    
+.pull-right {
 margin-right: 20px;
 }
 
@@ -131,8 +132,24 @@ border:none!important;
 margin:4px;
 }
 
+.search-stream .stream-user-item .social-proof {
+margin-left: 70px;
+}
+
+.search-stream .stream-item .content {
+margin-left: 70px;
+}
+
+.stream-item .account .content {
+margin-left: 75px;
+}
+
 .app {
 padding-left: 70px;
+}
+
+.cards-base img {
+margin: 0 auto;
 }
 
 .media-box img {
@@ -554,4 +571,6 @@ background-color:#A6CEEC;
   font-style: italic;
   font-weight: 700;
   src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'), url(http://themes.googleusercontent.com/static/fonts/roboto/v10/t6Nd4cfPRhZP44Q5QAjcC4bN6UDyHWBl620a-IRfuBk.woff) format('woff');
+}
+
 }
